--- a/README
+++ b/README
@@ -1,9 +1,8 @@
-								ECS 140 HOMEWORK-2					name: j suhas
-															s:id: 915623705
+					ECS 140 HOMEWORK-2					name: j suhas
+												s:id: 915623705
 
 
-
-part1:-
+Part1:-
 
 
 
